Fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+
 }
 .center-info {
   font-family: "Avenir";
